--- a/credentials.yml
+++ b/credentials.yml
@@ -23,8 +23,8 @@ rest:
 #  session_persistence: <true/false>
 
 twilio:
-  account_sid: "ACe9333d5678da0f78ba9960e5ce337f7d"
-  auth_token: "b20020717cb24c46d8a0cb9481aac9e5"
+  account_sid: "" #Add account_sid
+  auth_token: "" #Add auth_token
   twilio_number: "whatsapp:+14155238886"
 
 # This entry is needed if you are using Rasa X. The entry represents credentials
